# year-in-data

./: .env.example  .env.local.example  .gitignore  CLAUDE.md  Makefile  README.md  calorie-data.json  distinct-exercises.json  distinct-github-repos.json  distinct-kindle-books.json  distinct-workouts.json  docker-compose.yml  github-data.json  index.html  kindle-data.json  package-lock.json  package.json  pyproject.toml  running-data.json  sleep-data.json  steps-data.json  tsconfig.app.json  tsconfig.json  vite.config.ts  workout-data.json
assets/: index-B0nvc8xR.js  (+5 more)
pipeline/: .env-example  .gitignore  asset.py  bucket_setup.py  config.py  main.py  pyproject.toml  r2.py  stages.py  workspace.yaml
pipeline/app/: main.py
pipeline/common/: bucket_setup.py  config.py  paths.py  r2.py
pipeline/extract/: fitbit.py  garmin.py  github.py  gymgroup.py  kindle.py  macos_commands.py  macos_screentime.py  strong.py
pipeline/extractors/: fitbit.py  github.py  gymgroup.py  kindle.py  screentime.py  strong.py  zsh_history.py
pipeline/jobs/: __init__.py  aggregate.py  daily_aggregation.py  export.py  extract.py  fitbit.py  github.py  gymgroup.py  kindle.py  macos_commands.py  macos_screentime.py  strong.py
pipeline/models/bronze/: fitbit.py  fitbit_zip.py  github_api_response.py  github_contributions.py  gymgroup_api.py  gymgroup_checkins.py  kindle_reading.py  kindle_zip.py  macos_commands.py  macos_screentime.py  screentime_app_usage.py  strong_csv.py  strong_workouts.py  zsh_commands.py
pipeline/models/gold/: daily_calories.py  daily_commands.py  daily_contributions.py  daily_exercise.py  daily_gym_visits.py  daily_reading.py  daily_screen_time.py  daily_sleep.py  daily_steps.py  daily_workouts.py
pipeline/models/silver/: fitbit.py  fitbit_calories.py  fitbit_exercise.py  fitbit_sleep.py  fitbit_steps.py  github_contributions.py  gymgroup_visits.py  kindle_reading.py  macos_commands.py  macos_screentime.py  screentime_app_usage.py  strong_workouts.py  zsh_commands.py
pipeline/notebooks/: README.md  run_dagster_pipeline.ipynb  watch_history.ipynb
pipeline/src/app/: main.py
pipeline/src/app/core/: config.py
pipeline/src/app/db/: connection.py
pipeline/src/orchestrator/: dagster_types.py  main_definitions.py
pipeline/src/schemas/: app_usage_schemas.py  fitbit_schemas.py  kindle_schemas.py  youtube_schemas.py
pipeline/yd_extractor/fitbit/: sleep.py
pipeline/yd_extractor/macos/: screen_time.py
pipeline/yd_extractor/utils/: io.py
(+160 files in other folders)
