[project]
name = "yearly-data-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "boto3>=1.34.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "gdown>=5.0.0",
    "duckdb>=1.5.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
